client/src/index.css
:root {
  --text: #6e7f73;
  --text-h: #395886;
  --bg: #f2f2f0;
  --border: #c4cfc7;
  --code-bg: #D5DEEF;
  --accent: #628ECB;
  --accent-bg: rgba(98, 142, 203, 0.1);
  --accent-border: rgba(98, 142, 203, 0.5);
  --social-bg: rgba(196, 207, 199, 0.5);
  --shadow:
    rgba(57, 88, 134, 0.1) 0 10px 15px -3px, rgba(57, 88, 134, 0.05) 0 4px 6px -2px;

  --sans: system-ui, 'Segoe UI', Roboto, sans-serif;
  --heading: system-ui, 'Segoe UI', Roboto, sans-serif;
  --mono: ui-monospace, Consolas, monospace;

  font: 18px/145% var(--sans);
  letter-spacing: 0.18px;
  color-scheme: light dark;
  color: var(--text);
  background: var(--bg);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  @media (max-width: 1024px) {
    font-size: 16px;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --text: #f2f2f0;
    --text-h: #ffffff;
    --bg: #000000;
    --border: #395886;
    --code-bg: #111111;
    --accent: #628ECB;
    --accent-bg: rgba(98, 142, 203, 0.15);
    --accent-border: rgba(98, 142, 203, 0.5);
    --social-bg: rgba(255, 255, 255, 0.1);
    --shadow:
      rgba(255, 255, 255, 0.05) 0 10px 15px -3px, rgba(255, 255, 255, 0.02) 0 4px 6px -2px;
  }

  .bg-white, .bg-light, .card, .modal-content, .offcanvas, .dropdown-menu {
    background-color: #111111 !important;
    border-color: var(--border) !important;
    color: var(--text) !important;
  }

  .text-muted {
    color: #a0a0a0 !important;
  }

  .border, .border-bottom, .border-top, .border-end, .border-start {
    border-color: var(--border) !important;
  }
  #social .button-icon {
    filter: invert(1) brightness(2);
  }
}

body {
  margin: 0;
}

.text-dark {
  color: var(--text-h) !important;
}

#root {
  width: 1126px;
  max-width: 100%;
  margin: 0 auto;
  text-align: center;
  border-inline: 1px solid var(--border);
  min-height: 100svh;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

h1,
h2 {
  font-family: var(--heading);
  font-weight: 500;
  color: var(--text-h);
}

h1 {
  font-size: 56px;
  letter-spacing: -1.68px;
  margin: 32px 0;
  @media (max-width: 1024px) {
    font-size: 36px;
    margin: 20px 0;
  }
}
h2 {
  font-size: 24px;
  line-height: 118%;
  letter-spacing: -0.24px;
  margin: 0 0 8px;
  @media (max-width: 1024px) {
    font-size: 20px;
  }
}
p {
  margin: 0;
}

code,
.counter {
  font-family: var(--mono);
  display: inline-flex;
  border-radius: 4px;
  color: var(--text-h);
}

code {
  font-size: 15px;
  line-height: 135%;
  padding: 4px 8px;
  background: var(--code-bg);
}

